BLD: add Meson support to scipy.ndimage

--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -1,1 +1,20 @@
+# NumPy include directory - needed in all submodules
+incdir_numpy = run_command(py3,
+  ['-c', 'import numpy; print(numpy.get_include())'],
+  check : true
+).stdout().strip()
+
+inc_np = include_directories(incdir_numpy)
+
+# Don't use the deprecated NumPy C API. Define this to a fixed version instead of
+# NPY_API_VERSION in order not to break compilation for released SciPy versions
+# when NumPy introduces a new deprecation. Use in a meson.build file::
+#
+#   py3.extension_module('_name',
+#     'source_fname',
+#     numpy_nodepr_api)
+#
+numpy_nodepr_api = '-DNPY_NO_DEPRECATED_API=NPY_1_9_API_VERSION'
+
 subdir('cluster')
+subdir('ndimage')
