--- a/scipy/ndimage/meson.build
+++ b/scipy/ndimage/meson.build
@@ -53,3 +53,5 @@ py3.install_sources(
     pure: false,             # Will be installed next to binaries
     subdir: 'scipy/ndimage'  # Folder relative to site-packages to install to
 )
+
+subdir('tests')
