BLD: install files in scipy/

--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -16,6 +16,18 @@ inc_np = include_directories(incdir_numpy)
 #
 numpy_nodepr_api = '-DNPY_NO_DEPRECATED_API=NPY_1_9_API_VERSION'
 
+python_sources = [
+  '__init__.py',
+  '_distributor_init.py',
+  'conftest.py',
+]
+
+py3.install_sources(
+    python_sources,
+    pure: false,
+    subdir: 'scipy'
+)
+
 subdir('_lib')
 subdir('cluster')
 subdir('ndimage')
