BLD: add Meson support to odr submodule

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project(
   'SciPy',
-  'c', 'cpp', 'cython',
+  'c', 'cpp', 'cython', 'fortran',
   version: '1.7.0.dev0+ababababab', # FIXME: git hash
   license: 'BSD-3',
   meson_version: '>= 0.54',
