--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -82,7 +82,8 @@ jobs:
     - name: Install packages
       run: |
         pip install --user git+https://github.com/numpy/numpy.git
-        python3.10 -m pip install --user setuptools wheel cython pytest pybind11 pytest-xdist pythran
+        python3.10 -m pip install --user setuptools wheel cython pytest pybind11 pytest-xdist
+        python3.10 -m pip install --user git+https://github.com/serge-sans-paille/pythran.git@master
         python3.10 -m pip install -r mypy_requirements.txt
 
     - name: Test SciPy
