BLD: linalg: make cython_blas/lapack work

--- a/scipy/linalg/meson.build
+++ b/scipy/linalg/meson.build
@@ -138,7 +138,7 @@ _generate_cy = custom_target('_generate_cy',
             '_lapack_subroutine_wrappers.f',
            ],
   input : '_generate_pyx.py',
-  command : [py3, '@INPUT@', '-o', '@OUTDIR@'],  # TODO: support --outdir
+  command : [py3, '@INPUT@', '-o', '@OUTDIR@'],
 )
 
 fwrappers = static_library('fwrappers',
@@ -147,33 +147,50 @@ fwrappers = static_library('fwrappers',
    _generate_cy[6],
    _generate_cy[7],
    g77_abi_wrappers,
-  ],
-#  c_args : numpy_nodepr_api,
-#  include_directories : inc_np,
-#  dependencies : py3_dep,
-)
+  ])
 
-py3.extension_module('cython_blas',
+cython_blas = py3.extension_module('cython_blas',
   _generate_cy[0],  # cython_blas.pyx
+  # TODO: this mixed source case isn't working yet given Meson Cython support
+#  [_generate_cy[0],  # cython_blas.pyx
+#   _generate_cy[2],  # cython_blas.pxd
+#   _generate_cy[4],  # _blas_subroutines.h
+#   'fortran_defs.h',
+#  ],
   link_with : fwrappers,
+  include_directories : inc_np,
+  dependencies : [py3_dep, blas],
+  install : true,
+  subdir : 'scipy/linalg')
+
+py3.extension_module('cython_lapack',
+  _generate_cy[1],  # cython_lapack.pyx
+  # TODO: this mixed source case isn't working yet given Meson Cython support
+#  [_generate_cy[1],  # cython_lapack.pyx
+#   _generate_cy[3],  # cython_lapack.pxd
+#   _generate_cy[5],  # _lapack_subroutines.h
+#   'fortran_defs.h',
+#  ],
+  link_with : fwrappers,
+  include_directories : inc_np,
   dependencies : [py3_dep, blas],
   install : true,
   subdir : 'scipy/linalg')
 
 
 # _decomp_update (TODO: not working, see https://github.com/mesonbuild/meson/pull/8706)
+# will fail with `from . cimport cython_blas as blas_pointers`
 #_decomp_update_pyx = custom_target('_decomp_update',
 #  build_by_default : true,
 #  output : '_decomp_update.pyx',
 #  input : '_decomp_update.pyx.in',
-#  dependencies : cython_blas,
 #  command : [py3, tempita, '@INPUT@', '-o', '@OUTDIR@'],
 #)
 #
 #py3.extension_module('_decomp_update',
 #  _decomp_update_pyx,
-#  dependencies : py3_dep,
 #  include_directories : inc_np,
+#  dependencies : py3_dep,
 #  install : true,
 #  subdir : 'scipy/linalg')
 
