--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,11 @@ project(
     'buildtype=debugoptimized',
     'c_std=c99',
     'cpp_std=c++14',  # TODO: use c++11 if 14 is not available
+    # TODO: the below -Wno flags are all needed to silence warnings in
+    # f2py-generated code. This should be fixed in f2py itself.
+    'c_args=-Wno-unused-function -Wno-conversion -Wno-unused-but-set-variable -Wno-misleading-indentation -Wno-incompatible-pointer-types',
+    'fortran_args=-Wno-conversion',
+    'fortran_std=legacy',
   ],
 )
 
