--- a/scipy/optimize/meson.build
+++ b/scipy/optimize/meson.build
@@ -32,7 +32,7 @@ minpack_lib = static_library('minpack', ['minpack/hybrj.f',
 _minpack = py3.extension_module('_minpack',
   ['minpack.h', '__minpack.h', '_minpackmodule.c'],
   link_with : minpack_lib,
-  c_args : [numpy_nodepr_api],
+  c_args : numpy_nodepr_api,
   dependencies : [py3_dep],
   include_directories : include_dirs,
   install : true,
@@ -56,7 +56,7 @@ rectangular_lasp = static_library('rectangular_lasp',
 _lasp = py3.extension_module('_lasp',
   ['_lsap_module.c'],
   link_with : rectangular_lasp,
-  c_args : [numpy_nodepr_api],
+  c_args : numpy_nodepr_api,
   dependencies : [py3_dep],
   include_directories : include_dirs,
   install : true,
@@ -72,7 +72,7 @@ rootfind_lib = static_library('rootfind',
 _minpack = py3.extension_module('_zeros',
   ['zeros.c',],
   link_with : rootfind_lib,
-  c_args : [numpy_nodepr_api],
+  c_args : numpy_nodepr_api,
   dependencies : [py3_dep],
   include_directories : include_dirs,
   install : true,
@@ -87,7 +87,7 @@ lbfgsb_module = custom_target('lbfgsb_module',
 _lbfgsb = py3.extension_module('_lbfgsb', 
   ['lbfgsb_src/lbfgsb.f', 'lbfgsb_src/linpack.f', 
   'lbfgsb_src/timer.f', lbfgsb_module, fortranobject_c],
-  c_args : [numpy_nodepr_api],
+  c_args : numpy_nodepr_api,
   fortran_args : fortran_ignore_warnings,
   include_directories : [inc_np, inc_f2py],
   dependencies : [py3_dep],
@@ -96,7 +96,7 @@ _lbfgsb = py3.extension_module('_lbfgsb',
 
 moduleTNC = py3.extension_module('moduleTNC',
   ['tnc/tnc.h', 'tnc/moduleTNC.c', 'tnc/tnc.c'],
-  c_args: [numpy_nodepr_api],
+  c_args: numpy_nodepr_api,
   include_directories : [inc_np, inc_f2py],
   dependencies : [py3_dep],
   install: true,
@@ -110,7 +110,7 @@ cobyla_module = custom_target('cobyla_module',
 
 _cobyla = py3.extension_module('_cobyla',
   [cobyla_module, fortranobject_c, 'cobyla/cobyla2.f', 'cobyla/trstlp.f'],
-  c_args: [numpy_nodepr_api],
+  c_args: numpy_nodepr_api,
   fortran_args : fortran_ignore_warnings,
   include_directories : [inc_np, inc_f2py],
   dependencies : [py3_dep],
@@ -125,7 +125,7 @@ minpack2_module = custom_target('minpack2_module',
 
 minpack2 = py3.extension_module('minpack2',
   [minpack2_module, fortranobject_c, 'minpack2/dcsrch.f', 'minpack2/dcstep.f'],
-  c_args: [numpy_nodepr_api],
+  c_args: numpy_nodepr_api,
   fortran_args : fortran_ignore_warnings,
   include_directories : [inc_np, inc_f2py],
   dependencies : [py3_dep],
@@ -140,9 +140,59 @@ slsqp_module = custom_target('slsqp_module',
 
 _slsqp = py3.extension_module('_slsqp',
   [slsqp_module, fortranobject_c, 'slsqp/slsqp_optmz.f'],
-  c_args: [numpy_nodepr_api],
+  c_args: numpy_nodepr_api,
   fortran_args : fortran_ignore_warnings,
   include_directories : [inc_np, inc_f2py],
   dependencies : [py3_dep],
   install: true,
   subdir: 'scipy/optimize')
+
+__nnls_module = custom_target('__nnls_module',
+  output : ['__nnlsmodule.c'],
+  input : '__nnls/nnls.pyf',
+  command : [py3, generate_f2pymod, '@INPUT@', '-o', '@OUTDIR@'],
+)
+
+py3.install_sources(
+    ['__nnls.pyi'],
+    pure: false,
+    subdir: 'scipy/optimize'
+)
+
+__nnls = py3.extension_module('__nnls',
+  ['__nnls/nnls.f', __nnls_module, fortranobject_c],
+  c_args: numpy_nodepr_api,
+  fortran_args : fortran_ignore_warnings,
+  include_directories : [inc_np, inc_f2py],
+  dependencies : [py3_dep],
+  install: true,
+  subdir: 'scipy/optimize')
+
+res = run_command(py3, '-c', 'import os; print(os.environ.get("SCIPY_USE_PYTHRAN", 1))')
+if res.returncode() == 0
+  # TODO: Fix the following for Pythran to work.
+  # _group_columns = custom_target('_group_columns',
+  #   output: ['_group_columns.so'],
+  #   input : '_group_columns.py',
+  #   command : [pythran, '@INPUT@', '-o', '@OUTDIR@/_group_columns.so'],
+  # )
+  # _group_columns = py3.extension_module('_group_columns',
+  # [_group_columns],
+  # install: true,
+  # subdir: 'scipy/optimize')
+  _group_columns = py3.extension_module('_group_columns',
+    ['_group_columns.c'],
+    c_args: numpy_nodepr_api,
+    include_directories : [inc_np],
+    dependencies : [py3_dep],
+    install: true,
+    subdir: 'scipy/optimize')
+else
+  _group_columns = py3.extension_module('_group_columns',
+  ['_group_columns.c'],
+  c_args: numpy_nodepr_api,
+  include_directories : [inc_np],
+  dependencies : [py3_dep],
+  install: true,
+  subdir: 'scipy/optimize')
+endif
