pythran working in optimize

--- a/scipy/optimize/meson.build
+++ b/scipy/optimize/meson.build
@@ -170,20 +170,20 @@ __nnls = py3.extension_module('__nnls',
 
 res = run_command(py3, '-c', 'import os; print(os.environ.get("SCIPY_USE_PYTHRAN", 1))')
 if res.returncode() == 0
-  # DOES THIS WORK?
   _group_columns = custom_target('_group_columns',
-    output: ['_group_columns.so'],
+    output: ['_group_columns.cpp'],
     input : '_group_columns.py',
-    command : [pythran, '@INPUT@', '-o', '@OUTDIR@/_group_columns.so'],
+    command : [pythran, '-E', '@INPUT@', '-o', '@OUTDIR@/_group_columns.cpp'],
   )
   _group_columns = py3.extension_module('_group_columns',
   [_group_columns],
+  cpp_args: ['-Wno-unused-function', '-Wno-int-in-bool-context'],
+  include_directories: [inc_pythran],
   install: true,
   subdir: 'scipy/optimize')
 else
   _group_columns = py3.extension_module('_group_columns',
-  ['_group_columns.c'],
-  c_args: numpy_nodepr_api,
+  ['_group_columns.pyx'],
   include_directories : [inc_np],
   dependencies : [py3_dep],
   install: true,
