everything complete except _highs

--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,7 @@ project(
 cython = find_program('cython')
 pythran = find_program('pythran')
 generate_f2pymod = files('tools/generate_f2pymod.py')
+cythonize = files('tools/cythonize.py')
 tempita = files('scipy/_build_utils/tempita.py')
 
 # https://mesonbuild.com/Python-module.html
