--- a/scipy/optimize/_lsq/meson.build
+++ b/scipy/optimize/_lsq/meson.build
@@ -12,9 +12,11 @@ py3.install_sources(
 )
 
 
-_lsq = py3.extension_module('_lsq',
-  ['givens_elimination.pyx'],
-  include_directories: [inc_np],
-  dependencies: [py3_dep],
-  install: true,
-  subdir: 'scipy/optimize/_lsq')
+# TODO: depends on cython_lapack.pxd, which is generated in linalg/meson.build
+#       this doesn't work yet (waiting for "structured sources" Meson PR)
+#_lsq = py3.extension_module('_lsq',
+#  ['givens_elimination.pyx'],
+#  include_directories: [inc_np],
+#  dependencies: [py3_dep],
+#  install: true,
+#  subdir: 'scipy/optimize/_lsq')
