_integrate/_quadpack added

--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -81,6 +81,7 @@ subdir('_lib')
 subdir('cluster')
 subdir('constants')
 subdir('fftpack')
+subdir('integrate')
 subdir('linalg')
 subdir('ndimage')
 subdir('odr')
