Adding optimize to meson.build (#19)
* added minpack in optimize/meson.build

* added compiler flags

* corrected compiler flags

* added rootfind to meson.build

* removed redundant flag handling for compilers

* lbfgsb_module compiling with meson and ninja

* removed redundant dependency

* moduleTNC, cobyla working

* added slsqp to meson.build

* removed flags for c/cpp warnings

* added __nnls, _group_columns

* pythran handling changed

* pythran working in optimize

* added _bglu_dense

* everything complete except _highs

* added _highs and removed cythonize

* fixed cython_optimize build

* Added new lines

* WIP: disable building extensions that depend on cython_blas/lapack

This doesn't work well yet, depends on the "structured sources" Meson
PR. Until then we can have it a little (like done for `cython_blas`
itself), but let's not spend much time on that now - rather wait for
that PR to land.

Co-authored-by: Ralf Gommers <ralf.gommers@gmail.com>

--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -18,6 +18,14 @@ incdir_pybind11 = run_command(py3,
 
 inc_pybind11 = include_directories(incdir_pybind11)
 
+# Pythran include directory
+incdir_pythran = run_command(py3,
+  ['-c', 'import os; os.chdir(".."); import pythran; print(os.path.dirname(pythran.__file__));'],
+  check : true
+).stdout().strip()
+
+inc_pythran = include_directories(incdir_pythran)
+
 # Don't use the deprecated NumPy C API. Define this to a fixed version instead of
 # NPY_API_VERSION in order not to break compilation for released SciPy versions
 # when NumPy introduces a new deprecation. Use in a meson.build file::
@@ -73,3 +81,4 @@ subdir('fftpack')
 subdir('linalg')
 subdir('ndimage')
 subdir('odr')
+subdir('optimize')
