--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,7 @@ scipy/optimize/cython_optimize/_zeros.pyx
 scipy/optimize/lbfgsb/_lbfgsbmodule.c
 scipy/optimize/_highs/cython/src/_highs_wrapper.cxx
 scipy/optimize/_highs/cython/src/_highs_constants.cxx
+scipy/optimize/_highs/cython/src/_highs_wrapper.cpp
+scipy/optimize/_highs/cython/src/_highs_constants.cpp
+scipy/optimize/_highs/cython/src/_highs_wrapper.c
+scipy/optimize/_highs/cython/src/_highs_constants.c
