--- a/scipy/cluster/meson.build
+++ b/scipy/cluster/meson.build
@@ -25,3 +25,5 @@ py3.install_sources(
     pure: false,             # Will be installed next to binaries
     subdir: 'scipy/cluster'  # Folder relative to site-packages to install to
 )
+
+subdir('tests')
